<resources>
<string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
<string name="abc_action_bar_home_description">Navigate home</string>
<string name="abc_action_bar_up_description">Navigate up</string>
<string name="abc_action_menu_overflow_description">More options</string>
<string name="abc_action_mode_done">Done</string>
<string name="abc_activity_chooser_view_see_all">See all</string>
<string name="abc_activitychooserview_choose_application">Choose an app</string>
<string name="abc_capital_off">OFF</string>
<string name="abc_capital_on">ON</string>
<string name="abc_menu_alt_shortcut_label">Alt+</string>
<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
<string name="abc_menu_delete_shortcut_label">delete</string>
<string name="abc_menu_enter_shortcut_label">enter</string>
<string name="abc_menu_function_shortcut_label">Function+</string>
<string name="abc_menu_meta_shortcut_label">Meta+</string>
<string name="abc_menu_shift_shortcut_label">Shift+</string>
<string name="abc_menu_space_shortcut_label">space</string>
<string name="abc_menu_sym_shortcut_label">Sym+</string>
<string name="abc_prepend_shortcut_label">Menu+</string>
<string name="abc_search_hint">Search…</string>
<string name="abc_searchview_description_clear">Clear query</string>
<string name="abc_searchview_description_query">Search query</string>
<string name="abc_searchview_description_search">Search</string>
<string name="abc_searchview_description_submit">Submit query</string>
<string name="abc_searchview_description_voice">Voice search</string>
<string name="abc_shareactionprovider_share_with">Share with</string>
<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
<string name="abc_toolbar_collapse_description">Collapse</string>
<string name="account_logged_out">Account logged out</string>
<string name="account_social_title">SOCIAL</string>
<string name="account_verified">Account verified</string>
<string name="action_account">My Account</string>
<string name="action_downloads">Downloads</string>
<string name="action_downloads_count">Downloads (%d)</string>
<string name="action_downloads_subtitle">Watch videos offline</string>
<string name="action_help">Help</string>
<string name="action_learn_more">Learn More</string>
<string name="action_mode_watchlist_title">Select Items to Remove</string>
<string name="action_my_rewards">Prizes</string>
<string name="action_my_rewards_subtitle">Prizes you have won</string>
<string name="action_privacy_text">Privacy Policy</string>
<string name="action_report">Feedback</string>
<string name="action_search">Search</string>
<string name="action_settings">Settings</string>
<string name="action_sign_in">Log in</string>
<string name="action_sign_out">Log out</string>
<string name="action_sign_out_message">Signed Out</string>
<string name="action_sign_up">Create account</string>
<string name="action_terms_text">Terms of Use</string>
<string name="action_watchlist">Watchlist</string>
<string name="action_watchlist_subtitle">Save to watch later</string>
<string name="ad_badge_label">Ad</string>
<string name="ad_badge_text">Ad</string>
<string name="ad_carousel_closes_text">Closing in %ds</string>
<string name="ad_close">CLOSE AD</string>
<string name="ad_close_timer_text">CLOSING in %ds</string>
<string name="ad_tailor_closes_text">Answer to skip • %ds</string>
<string name="ad_tailor_closes_text_port">%ds</string>
<string name="ad_timer_text">Video returns in %ds</string>
<string name="add_watchlist">Add content to your watchlist</string>
<string name="adv_click_through_action_label_call">Call Advertiser</string>
<string name="adv_click_through_action_label_sms">SMS Advertiser</string>
<string name="age_error">Please enter your age</string>
<string name="allow">ALLOW</string>
<string name="already_member">Already a member? Log In</string>
<string name="already_member_sign_in">"&lt;font color='#919191'>Already a member? &lt;/font>&lt;font color='#55AA29'> &lt;a href='loginClick'>&lt;b>Log In&lt;/b>&lt;/a>&lt;/font>"</string>
<string name="already_member_sign_in_international">"&lt;font color='#ffffff'>Already a member? &lt;/font>&lt;font color='#55AA29'> &lt;a href='loginClick'>&lt;b>Log In&lt;/b>&lt;/a>&lt;/font>"</string>
<string name="already_subscriber">Already a subscriber? </string>
<string name="amount_payable">Amount Payable</string>
<string name="annually">Annually</string>
<string name="app_name">Hotstar</string>
<string name="app_not_found">No application found which can complete this task</string>
<string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
<string name="apple_cancellation_instructions_url">https://support.apple.com/en-gb/HT202039</string>
<string name="apple_instructions_for_cancellation">APPLE INSTRUCTIONS FOR CANCELLATION</string>
<string name="audio_and_subtitles">Audio &amp; Subtitles</string>
<string name="audio_label_language">Select audio language</string>
<string name="audio_language">Audio Language</string>
<string name="auth_account_created">Account Created</string>
<string name="auth_age">Age</string>
<string name="auth_already_have_an_account_log_in">"&lt;font color='#919191'>Already have an account? &lt;/font>&lt;font color='#55AA29'> &lt;a href='loginClick'>&lt;b>Log in&lt;/b>&lt;/a>&lt;/font>"</string>
<string name="auth_done">DONE</string>
<string name="auth_dont_have_an_account_sign_up">"&lt;font color='#919191'>Don’t have an account? &lt;/font>&lt;font color='#55AA29'> &lt;a href='signupClick'>&lt;b>Create account&lt;/b>&lt;/a>&lt;/font>"</string>
<string name="auth_email_address">Email Address</string>
<string name="auth_female">Female</string>
<string name="auth_full_name">Full Name</string>
<string name="auth_gender">Gender</string>
<string name="auth_introduction">Tell us about you</string>
<string name="auth_male">Male</string>
<string name="auth_no_otp">"Didn't receive an SMS?"</string>
<string name="auth_otp_error">"The code you've entered is incorrect"</string>
<string name="auth_otp_via_call">GET CODE VIA CALL</string>
<string name="auth_password_address">Password</string>
<string name="auth_resend_code">RESEND CODE</string>
<string name="auth_set_password">Set Password</string>
<string name="auth_terms_condtions_privacy_policy">"&lt;font color='#919191'>I agree to the &lt;/font>&lt;font color='#55AA29'> &lt;a href='termsClick'>&lt;b>Terms of Use&lt;/b>&lt;/a>&lt;/font>&lt;font color='#919191'> and &lt;/font>&lt;font color='#55AA29'> &lt;a href='privacyClick'>&lt;b>Privacy Policy&lt;/b>&lt;/a>&lt;/font>"</string>
<string name="auth_your_name">Your name</string>
<string name="back_to_jio_tv">Back To JioTv</string>
<string name="beta_assets">false</string>
<string name="billing">BILLING</string>
<string name="bitrate_label_quality">Select Video Quality</string>
<string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
<string name="browse">Browse</string>
<string name="btn_text_undo">UNDO</string>
<string name="build_version">8</string>
<string name="bullet">•</string>
<string name="camera_gallary_permission_msg">We need camera and storage access for photos</string>
<string name="camera_permission_denied_description">We need photos access to save photos on your phone.</string>
<string name="camera_permission_denied_title">Camera and Photos Access needed</string>
<string name="camera_permission_description">Tap “Allow” on the next screen so that you can take pictures and post them</string>
<string name="camera_permission_msg">We need camera access to take photos</string>
<string name="camera_permission_title">Allow Camera and Photo Access</string>
<string name="cameraview_default_autofocus_marker">com.otaliastudios.cameraview.markers.DefaultAutoFocusMarker</string>
<string name="cameraview_filter_autofix">com.otaliastudios.cameraview.filters.AutoFixFilter</string>
<string name="cameraview_filter_black_and_white">com.otaliastudios.cameraview.filters.BlackAndWhiteFilter</string>
<string name="cameraview_filter_brightness">com.otaliastudios.cameraview.filters.BrightnessFilter</string>
<string name="cameraview_filter_contrast">com.otaliastudios.cameraview.filters.ContrastFilter</string>
<string name="cameraview_filter_cross_process">com.otaliastudios.cameraview.filters.CrossProcessFilter</string>
<string name="cameraview_filter_documentary">com.otaliastudios.cameraview.filters.DocumentaryFilter</string>
<string name="cameraview_filter_duotone">com.otaliastudios.cameraview.filters.DuotoneFilter</string>
<string name="cameraview_filter_fill_light">com.otaliastudios.cameraview.filters.FillLightFilter</string>
<string name="cameraview_filter_gamma">com.otaliastudios.cameraview.filters.GammaFilter</string>
<string name="cameraview_filter_grain">com.otaliastudios.cameraview.filters.GrainFilter</string>
<string name="cameraview_filter_grayscale">com.otaliastudios.cameraview.filters.GrayscaleFilter</string>
<string name="cameraview_filter_hue">com.otaliastudios.cameraview.filters.HueFilter</string>
<string name="cameraview_filter_invert_colors">com.otaliastudios.cameraview.filters.InvertColorsFilter</string>
<string name="cameraview_filter_lomoish">com.otaliastudios.cameraview.filters.LomoishFilter</string>
<string name="click_to_edit_configs">Click to edit configs</string>
<string name="config_editor">Config Editor</string>
<string name="cricket_tournament_standing_matches_lost_short">L</string>
<string name="cricket_tournament_standing_matches_no_result_short">NR</string>
<string name="cricket_tournament_standing_matches_points">Pts</string>
<string name="cricket_tournament_standing_matches_short">M</string>
<string name="cricket_tournament_standing_matches_won_short">W</string>
<string name="cricket_tournament_standing_position_team">Position &amp; Team</string>
<string name="disable_ads_key">dev_ads_disable</string>
<string name="email_sent">Email sent</string>
<string name="email_sent_desc_reset_password">Instructions on resetting password have been sent. Please check spam or junk folder incase its not seen in your inbox</string>
<string name="empty" />
<string name="enter_your_email_for_reset_password">Instructions on resetting password will be sent to the below email ID</string>
<string name="enter_your_email_id">Your email</string>
<string name="error_generic_message">Something went wrong. Please try again in sometime.</string>
<string name="error_generic_title">Oops!</string>
<string name="flavor_leak_canary_key">dev_leak_canary_enabled</string>
<string name="flavor_pref_key">dev_settings_flavor</string>
<string name="flavor_pref_summary">Click to change env(App will restart)</string>
<string name="flavor_pref_title">Default Flavor</string>
<string name="forgot">FORGOT ?</string>
<string name="key_moments_will_be_here">Key Moments will be here soon</string>
<string name="login">LOGIN</string>
<string name="login_close_description">Login Nudge Close</string>
<string name="media_route_menu_title">Cast</string>
<string name="password_hint">Password</string>
<string name="paywall_cast_menu_title">Paywall Cast</string>
<string name="picture_in_picture">Picture-in-Picture</string>
<string name="player_menu_expand">Expand</string>
<string name="player_menu_settings">Settings</string>
<string name="player_menu_share">Share</string>
<string name="please_select_your_gender">Please select your gender</string>
<string name="privacy_policy_action">Privacy Policy</string>
<string name="retry_caps">RETRY</string>
<string name="send_email">SEND EMAIL</string>
<string name="separator_dot">•</string>
<string name="subHeader" />
<string name="tag_main_scrolling_view">main_scrolling_view</string>
<string name="terms_of_use_action">T&amp;C</string>
<string name="videoQuality" />
<string name="waiting_for_the_match">Waiting for the match to heat up</string>
<string name="welcome_back">Welcome back</string>
</resources>