<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:tag="layout/sports_cricket_standing_list_header_0" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="@dimen/tournament_standing_list_header_top_margin" android:layout_marginRight="8.0dip" android:layout_marginBottom="@dimen/tournament_standing_list_header_top_margin">
		<in.startv.hotstar.rocky.ui.customviews.HSTextView android:paddingLeft="@dimen/tournament_standing_list_header_position_team_text_left_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cricket_tournament_standing_position_team" android:layout_weight="50.0" style="@style/P2.Regular.BrownishGrey" />
		<in.startv.hotstar.rocky.ui.customviews.HSTextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cricket_tournament_standing_matches_short" android:layout_weight="10.0" style="@style/P3.Regular.BrownishGrey" />
		<in.startv.hotstar.rocky.ui.customviews.HSTextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cricket_tournament_standing_matches_won_short" android:layout_weight="10.0" style="@style/P3.Regular.BrownishGrey" />
		<in.startv.hotstar.rocky.ui.customviews.HSTextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cricket_tournament_standing_matches_lost_short" android:layout_weight="10.0" style="@style/P3.Regular.BrownishGrey" />
		<in.startv.hotstar.rocky.ui.customviews.HSTextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cricket_tournament_standing_matches_no_result_short" android:layout_weight="10.0" style="@style/P3.Regular.BrownishGrey" />
		<in.startv.hotstar.rocky.ui.customviews.HSTextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cricket_tournament_standing_matches_points" android:layout_weight="10.0" style="@style/P3.Regular.BrownishGrey" />
	</LinearLayout>
	<View android:background="@color/tournament_standing_list_top_divider" android:layout_width="fill_parent" android:layout_height="@dimen/tournament_standing_list_row_divider_height" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" />
</LinearLayout>
