<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:tag="layout/fragment_forgot_password_new_0" android:paddingLeft="@dimen/padding_auth_v2" android:paddingTop="@dimen/pnl_padding_top" android:paddingRight="@dimen/padding_auth_v2" android:paddingBottom="@dimen/padding_auth_v2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
	<LinearLayout android:orientation="vertical" android:id="@id/forgot_password_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<in.startv.hotstar.rocky.ui.customviews.HSTextView android:textSize="18.0sp" android:textColor="@color/forgot_password_description" android:id="@id/email_password_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/enter_your_email_for_reset_password" android:lineSpacingExtra="10.0sp" style="@style/H2.Regular" />
		<com.google.android.material.textfield.TextInputLayout android:theme="@style/PnlTextInputTheme" android:textColor="@color/auth_text_color" android:id="@id/email_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/forgot_email_margin_top" app:hintEnabled="false">
			<in.startv.hotstar.rocky.ui.customviews.HSEditText android:id="@id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/auth_email_address" android:maxLength="256" android:inputType="textEmailAddress" style="@style/PnlEditTextStyle" />
		</com.google.android.material.textfield.TextInputLayout>
		<in.startv.hotstar.rocky.ui.customviews.HSButton android:id="@id/send_email" android:layout_marginTop="@dimen/forgot_send_email_margin_top" android:text="@string/send_email" style="@style/ButtonGreenGray" />
	</LinearLayout>
	<RelativeLayout android:id="@id/email_sent_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
			<in.startv.hotstar.rocky.ui.customviews.HSTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/email_sent" android:fontFamily="@font/roboto_medium" style="@style/H2.Regular.Black" />
			<in.startv.hotstar.rocky.ui.customviews.HSTextView android:textSize="@dimen/email_sent_instruction_text_size" android:textColor="@color/forgot_password_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/email_sent_screen_description_margin" android:text="@string/email_sent_desc_reset_password" android:lineSpacingExtra="10.0sp" style="@style/H2.Regular" />
			<in.startv.hotstar.rocky.ui.customviews.HSButton android:id="@id/login" android:layout_marginTop="@dimen/email_sent_login_btn_margin_top" android:text="@string/login" style="@style/ButtonGreenGray" />
		</LinearLayout>
		<in.startv.hotstar.rocky.ui.customviews.HSTextView android:gravity="center_horizontal" android:id="@id/resolution_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:bufferType="spannable" android:layout_alignParentBottom="true" style="@style/P2.Regular" />
	</RelativeLayout>
</LinearLayout>
