<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/fragment_request_user_detail_0" android:background="@color/login_bg" android:paddingLeft="@dimen/padding_auth_v2" android:paddingTop="@dimen/pnl_padding_top" android:paddingRight="@dimen/padding_auth_v2" android:paddingBottom="@dimen/padding_auth_v2" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<in.startv.hotstar.rocky.ui.customviews.HSTextView android:id="@id/tv_about" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auth_introduction" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/H3.Regular.Black" />
	<com.google.android.material.textfield.TextInputLayout android:theme="@style/PnlTextInputTheme" android:textColor="@color/auth_text_color" android:id="@id/name_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/user_detail_name_margin_top" app:hintEnabled="false" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_about">
		<in.startv.hotstar.rocky.ui.customviews.HSEditText android:textAppearance="@style/P1.Regular" android:id="@id/et_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/auth_your_name" android:maxLength="256" android:inputType="textPersonName" style="@style/PnlEditTextStyle">
			<requestFocus />
		</in.startv.hotstar.rocky.ui.customviews.HSEditText>
	</com.google.android.material.textfield.TextInputLayout>
	<com.google.android.material.textfield.TextInputLayout android:theme="@style/PnlTextInputTheme" android:textColor="@color/auth_text_color" android:id="@id/age_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/user_detail_age_margin_top" app:hintEnabled="false" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/name_input_layout" app:passwordToggleEnabled="true" app:passwordToggleTint="@color/auth_show_hide_color">
		<in.startv.hotstar.rocky.ui.customviews.HSEditText android:id="@id/et_age" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/auth_age" android:maxLength="3" android:inputType="number" style="@style/PnlEditTextStyle" />
	</com.google.android.material.textfield.TextInputLayout>
	<in.startv.hotstar.rocky.ui.customviews.HSTextView android:textSize="@dimen/Text.P1" android:textColor="@color/gender_text" android:gravity="center_vertical" android:id="@id/tv_gender" android:paddingTop="@dimen/user_detail_gender_padding" android:paddingBottom="@dimen/user_detail_gender_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/user_detail_gender_margin_top" android:text="@string/auth_gender" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/radio_group_gender" app:layout_constraintTop_toBottomOf="@id/age_input_layout" />
	<RadioGroup android:gravity="right" android:orientation="horizontal" android:id="@id/radio_group_gender" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/gender_right_margin" app:layout_constraintBottom_toBottomOf="@id/tv_gender" app:layout_constraintLeft_toRightOf="@id/tv_gender" app:layout_constraintTop_toTopOf="@id/tv_gender">
		<RadioButton android:textColor="@drawable/gender_selector" android:id="@id/male" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auth_male" app:buttonTint="@color/gender_button_selector" style="@style/RadioBtnTextStyle" />
		<RadioButton android:textColor="@drawable/gender_selector" android:id="@id/female" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:text="@string/auth_female" app:buttonTint="@color/gender_button_selector" style="@style/RadioBtnTextStyle" />
	</RadioGroup>
	<in.startv.hotstar.rocky.ui.customviews.HSTextView android:textSize="@dimen/Text.P3" android:textColor="@color/pnl_error_text_color" android:gravity="center_vertical" android:id="@id/tv_gender_error" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/please_select_your_gender" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/radio_group_gender" />
	<in.startv.hotstar.rocky.ui.customviews.HSButton android:id="@id/btn_continue" android:layout_marginTop="@dimen/signup_button_top_margin" android:text="@string/auth_done" app:layout_constraintTop_toBottomOf="@id/tv_gender_error" style="@style/ButtonGreenGray" />
</androidx.constraintlayout.widget.ConstraintLayout>
