<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<in.startv.hotstar.rocky.ui.customviews.HSTextView android:id="@id/header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/videoQuality" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/PlayerSettingOptionsItem" />
	<in.startv.hotstar.rocky.ui.customviews.HSTextView android:textColor="@color/black_opaque_50" android:gravity="left" android:id="@id/subHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio_language" android:contentDescription="@string/subHeader" app:layout_constraintBottom_toBottomOf="@id/header" app:layout_constraintLeft_toRightOf="@id/header" app:layout_constraintTop_toTopOf="@id/header" style="@style/PlayerSettingOptionsDescItem" />
	<ImageView android:id="@id/chevron" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:contentDescription="@string/videoQuality" app:layout_constraintBottom_toBottomOf="@id/header" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/header" app:srcCompat="@drawable/ic_player_settings_chevron" />
</androidx.constraintlayout.widget.ConstraintLayout>
