<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@id/login_container" android:tag="layout/fragment_email_login_0" android:background="@drawable/bg_login_fragment" android:paddingLeft="@dimen/padding_auth_v2" android:paddingTop="@dimen/pnl_padding_top" android:paddingRight="@dimen/padding_auth_v2" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<ImageView android:id="@id/iv_login_close" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginTop="@dimen/login_close_top_margin" android:contentDescription="@string/login_close_description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_icn_close" />
	<in.startv.hotstar.rocky.ui.customviews.HSTextView android:textSize="18.0sp" android:id="@id/email_password_header" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/welcome_back" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_login_close" style="@style/H2.Regular.Black" />
	<com.google.android.material.textfield.TextInputLayout android:theme="@style/PnlTextInputTheme" android:textColor="@color/auth_text_color" android:id="@id/email_input_layout" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:longClickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="31.0dip" app:hintEnabled="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/email_password_header">
		<in.startv.hotstar.rocky.ui.customviews.HSEditText android:textAppearance="@style/P1.Regular.Black" android:id="@id/email" android:focusable="false" android:focusableInTouchMode="false" android:clickable="false" android:longClickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_your_email_id" android:cursorVisible="false" android:maxLength="256" android:inputType="textEmailAddress" style="@style/PnlEditTextStyle" />
	</com.google.android.material.textfield.TextInputLayout>
	<com.google.android.material.textfield.TextInputLayout android:theme="@style/PnlTextInputTheme" android:textColor="@color/auth_text_color" android:id="@id/password_input_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/password_margin_top" app:hintEnabled="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/email_input_layout" app:passwordToggleEnabled="true" app:passwordToggleTint="@color/auth_show_hide_color">
		<in.startv.hotstar.rocky.ui.customviews.HSEditText android:textAppearance="@style/P1.Regular.Black" android:id="@id/password" android:paddingBottom="@dimen/password_padding_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password_hint" android:maxLength="256" android:inputType="textPassword" style="@style/PnlEditTextStyle" />
	</com.google.android.material.textfield.TextInputLayout>
	<in.startv.hotstar.rocky.ui.customviews.HSTextView android:textSize="@dimen/forgot_password_text_size" android:textColor="@color/pnl_forgot_text_color" android:id="@id/forgot_password" android:background="?android:selectableItemBackground" android:layout_width="wrap_content" android:layout_height="@dimen/forgot_text_height" android:layout_marginTop="@dimen/forgot_margin_top" android:text="@string/forgot" android:lineSpacingExtra="@dimen/hotstar_account_exist_line_spacing" android:fontFamily="@font/roboto_medium" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/password_input_layout" style="@style/P1.Regular" />
	<in.startv.hotstar.rocky.ui.customviews.HSButton android:id="@id/btn_done" android:layout_marginTop="@dimen/email_margin_top_done" android:text="@string/auth_done" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/forgot_password" style="@style/ButtonGreenGray" />
</androidx.constraintlayout.widget.ConstraintLayout>
